k8s/paperless_ngx/ingress.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: paperless-ngx
  namespace: apps-paperless-ngx
  labels:
    app.kubernetes.io/name: paperless-ngx
    app.kubernetes.io/component: webserver
    app.kubernetes.io/managed-by: argocd
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Paperless-NGX"
    gethomepage.dev/description: "Document management and archive"
    gethomepage.dev/group: "Documents"
    gethomepage.dev/icon: "paperless-ngx.png"
spec:
  ingressClassName: tailscale
  rules:
    - host: paperless.rohu-shark.ts.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: paperless-ngx-webserver
                port:
                  number: 80
  tls:
    - hosts:
        - paperless
